@@ -1,5 +1,9 @@
 2010-06-26  Jared L Jennings  <jaredljennings@gmail.com>
 
+	* LDAPUser.cs: 
+
+2010-06-26  Jared L Jennings  <jaredljennings@gmail.com>
+
 	* ATTRNAME.cs: 
 
 2010-06-26  Jared L Jennings  <jaredljennings@gmail.com>
